Video-Calling, and image in readme added , needs of previous commits are to be served

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fontFamily="@font/montserrat"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:fontFamily="@font/montserrat"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OFYWellness"
-        tools:targetApi="31"><activity
-        android:name=".Category"
-        android:exported="false"
-
-        android:theme="@style/Theme.OFYWellness.NoActionBar"/>
+        tools:targetApi="31">
+        <activity
+            android:name=".MeetActivity"
+            android:exported="false"
+            android:theme="@style/Theme.OFYWellness.NoActionBar" />
+        <activity
+            android:name=".Category"
+            android:exported="false"
+            android:theme="@style/Theme.OFYWellness.NoActionBar" />
         <activity
             android:name=".Home"
             android:exported="true"
-            android:theme="@style/Theme.OFYWellness.NoActionBar"/>
+            android:theme="@style/Theme.OFYWellness.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
