Image uploading working, video calling works images added see full commits for all details image uploading has issues move it to Database class rename all added images proper comments required

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
+            android:name=".MeetActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Category"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="true" >
             <intent-filter>
