Added prescription updating in database feature, comments need to be checked in each file updated and added, unnecessary hints in text views in view meal tab to be removed
Signed-off-by: Prathamesh Bhagat <prathameshbhagat0608@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             android:name=".UpdateDietTargetActivity"
             android:exported="false" />
         <activity
+            android:name=".UpdateMedicinePrescriptionActivity"
+            android:exported="false" />
+        <activity
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
