Meal nutrient detection added and modification in manifest for precious commit done
Signed-off-by: Prathamesh Bhagat <prathameshbhagat0608@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,9 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    // below are implementations for the meal image detection, optimize the dependencies
+    implementation libs.generativeai
+    implementation libs.guava
+    implementation libs.reactive.streams
 }
