Tab show casing functionality added via Tap Target library
Signed-off-by: Prathamesh Bhagat <prathameshbhagat0608@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     implementation libs.generativeai
     implementation libs.guava
     implementation libs.reactive.streams
+
+    // implementations for Tap Targets, the hints for views
+    implementation libs.taptargetview
 }
